--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         tools:targetApi="31">
         <activity
             android:name=".SummaryPage"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".FormSubmission"
             android:exported="true"
