--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.FoundLah"
         tools:targetApi="31">
         <activity
+            android:name=".AdminSummaryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FollowupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChatboxActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TestActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConvoListActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
