--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,13 @@
         tools:targetApi="31">
         <activity
             android:name=".AdminSummaryActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".FollowupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ChatboxActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TestActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ConvoListActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
