Edited Android Manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             android:name=".SummaryPage"
             android:exported="true" />
         <activity
+            android:name=".FormSubmission"
+            android:exported="true" />
+        <activity
+            android:name=".ChatActivity"
+            android:exported="true" />
+        <activity
             android:name=".AdminSummaryActivity"
             android:exported="true" />
         <activity
