--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -18,8 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoundLah"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".OngoingActivity"
+            android:exported="true" />
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
@@ -58,12 +60,11 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FoundLah">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
