Made a dynamic summary page to cater for both forms

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,13 @@
             android:exported="true" />
         <activity
             android:name=".Login"
-            android:exported="true" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".CreateAccountActivity"
             android:exported="true" />
@@ -44,10 +50,7 @@
             android:name=".ConvoListActivity"
             android:exported="true" />
         <activity
-            android:name=".FoundSummary"
-            android:exported="true" />
-        <activity
-            android:name=".LostSummary"
+            android:name=".SummaryActivity"
             android:exported="true" />
         <activity
             android:name=".LostForm"
@@ -60,11 +63,6 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FoundLah">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
