--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -18,15 +18,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoundLah"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".ChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConvoListActivity"
             android:exported="true" />
         <activity
-            android:name=".Page1"
+            android:name=".AdminHomeActivity"
             android:exported="true" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".SummaryPage"
             android:exported="true" />
@@ -34,18 +44,11 @@
             android:name=".FormSubmission"
             android:exported="true" />
         <activity
-            android:name=".ChatActivity"
-            android:exported="true" />
-        <activity
             android:name=".AdminSummaryActivity"
             android:exported="true" />
         <activity
             android:name=".FollowupActivity"
             android:exported="true" />
-        <activity
-            android:name=".ConvoListActivity"
-            android:exported="true" />
-
         <activity
             android:name=".FoundSummary"
             android:exported="true" />
@@ -62,14 +65,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FoundLah">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-        </activity>
+            android:theme="@style/Theme.FoundLah" />
     </application>
 
 </manifest>
