UI Changes made and Merge with ZY

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             android:name=".Login"
             android:exported="true" />
         <activity
+            android:name=".HomeActivity"
+            android:exported="true" />
+        <activity
             android:name=".AdminHomeActivity"
             android:exported="true" />
         <activity
