--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,15 @@
         android:theme="@style/Theme.FoundLah"
         tools:targetApi="31">
         <activity
-            android:name=".ChatActivity"
-            android:windowSoftInputMode="adjustPan"
+            android:name=".AdminConvoListActivity"
             android:exported="false" />
+        <activity
+            android:name=".AdminChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChatActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ConvoListActivity"
             android:exported="true" />
