--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,9 @@
         <activity
             android:name=".ConvoListActivity"
             android:exported="true" />
-        <activity
-            android:name=".Login"
-            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".LoginActivity"-->
+<!--            android:exported="true" />-->
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
@@ -52,8 +52,10 @@
             android:name=".AdminHomeActivity"
             android:exported="true" />
         <activity
-            android:name=".LoginActivity"
-            android:exported="true">
+            android:name=".Login"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FoundLah">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -77,11 +79,6 @@
         <activity
             android:name=".FoundForm"
             android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.FoundLah" />
     </application>
 
 </manifest>
